--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    text-size-adjust: 32px  ;
+    font-size: 24px;
 }
 
 header{
     background-color: #ADD8E6;
-    padding: 10px 10%;
+    padding: 10px 20%;
 }
 
 .container{
@@ -83,7 +83,7 @@ nav ul{
 
 
 .item{
-    height: 300px; 
+    height: 500px; 
     border-style: dashed;
     }
 
@@ -126,4 +126,27 @@ footer{
     flex-basis: 25%;
     border-style: dashed;
     border-color: whitesmoke;
+}
+
+.footer2{
+    border-top: 1px white;
+    padding:20px 20% 0 20%;
+}
+
+.footer-content{
+    justify-content: space-between;
+    background-color: #7fffd4;
+    padding: 10px 0
+}
+
+.logo2 {
+    padding: 10px;
+}
+.bottom-content{
+    background-color: #ffb6c1;
+    border-style: dashed;
+}
+
+.button{
+    padding: 10px;
 }
